--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Blog Ninja | <%= title %></title>
+  <title>Blogs | <%= title %></title>
   <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" type="text/css" href="/css/style.css" />
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300"
+    rel="stylesheet"
+    type="text/css"
+  />
 </head>
